antlr-basics/src/main/java/com/poc/chapter_04/LibExpr.g4
grammar LibExpr;
import CommonLexerRules;

program : statement+;
statement : expression NEWLINE
            | ID '=' expression NEWLINE
            | NEWLINE
            ;
expression : expression ('*'|'/') expression
            | expression ('+'|'-') expression
            | INT
            | ID
            | '(' expression ')';
